--- a/mpd/PKGBUILD
+++ b/mpd/PKGBUILD
@@ -7,8 +7,8 @@
 # Contributor: Ben <ben@benmazer.net>
 
 pkgname=mpd
-pkgver=0.23.5
-pkgrel=6
+pkgver=0.23.6
+pkgrel=1
 pkgdesc="Flexible, powerful, server-side application for playing music"
 arch=(x86_64)
 url="https://www.musicpd.org/"
@@ -17,7 +17,7 @@ depends=(bzip2 chromaprint gcc-libs glibc lame libcdio libcdio-paranoia
 libgcrypt libgme libmad libmms libmodplug libmpcdec libnfs libshout
 libsidplayfp libsoxr openal opus smbclient sqlite wavpack wildmidi zlib
 zziplib)
-makedepends=(alsa-lib audiofile avahi boost curl dbus expat faad2 ffmpeg4.4 flac
+makedepends=(alsa-lib audiofile avahi boost curl dbus expat faad2 ffmpeg flac
 fluidsynth fmt icu jack libao libid3tag libmikmod libmpdclient libogg
 libopenmpt libpulse libsamplerate libsndfile libupnp liburing libvorbis meson
 mpg123 pipewire python-sphinx systemd-libs twolame yajl)
@@ -30,13 +30,13 @@ source=(
   $pkgname.tmpfiles
   $pkgname.service.override
 )
-sha512sums=('3a870e79bb82c9e8877958d271e933daa3dd970a4510aff4aeea91feab521d7927cd59c7f1ea16a36e84ff879e4f24e4347602ac449c5da31853acb5a3b46f34'
+sha512sums=('1595fcc53a67f1a68b0c0516697d242da53b91626e37bc2f49095add78eb497a52c67c961a421f20b40f3c57a571557a76559a212838de2a3ec4aec6c7a3288d'
             'SKIP'
             '25a823740d92da8e186916701413114142eb6ad91a172c592e68b569c8e4f50fa99580e555ccf6cd31fc4f55a09bfe0278efa46e4e76ee0fe02846292fadf3c1'
             '6e467481406279767b709ec6d5c06dbd825c0de09045c52ffa2d21d0604dcfe19b7a92bf42bed25163d66a3a0d1dbde6185a648b433eaf5eac56be90491e2e18'
             'db473db27cd68994c3ee26e78e0fb34d13126301d8861563dcc12a22d62ecb14c4ffb1e0798c6aaccdff34e73bae3fbeeff7b42606c901a2d35e278865cdf35d'
             'c1782b82f9db1d30aece43a07230c5d57370f2494a16e108af03815d83968805472f10f53ea5495cf0e08ff8f245430c3c3bc44025af43aaf9ecd12fcd6afc6c')
-b2sums=('91f0d37bca0632a414083f6ecf8838ba5dc4ef4965692b14e56587d3d145140f61bcc120fe4b2bf83eb41f2a7e085da4d999efc19ca9717d2552d92fc6359c65'
+b2sums=('5ccb4a7c06c4317e3285846a261438bdcc10db5eaf71fcba969bcae8321ca50bb26fe9317e23e38eca1c4a8785015596064d5bfc692bf66f8007d0d2a1b71cbb'
         'SKIP'
         '0969a3c477b6a3f34b44e067e515d7f306414dd14e0163584417b9d071e3cc825898219f7ff66ead7905b15429b8411304052d3b2b14a72e560bfabf9bf0adcf'
         '4ab6e415284c77802a39d0913d701fe55e56f3c22b19557661fbef77e456b5e1d151da4202695282b956602e716a7afdb994aa2fc17368b9a0d0d051d47a3afb'
@@ -54,9 +54,6 @@ build() {
     -D b_ndebug=true
   )
 
-  # we currently require ffmpeg4.4 as otherwise database update is broken:
-  # https://github.com/MusicPlayerDaemon/MPD/issues/1448
-  export PKG_CONFIG_PATH='/usr/lib/ffmpeg4.4/pkgconfig'
   # NOTE: sndio conflicts with alsa
   # TODO: package adplug
   # TODO: package shine
