--- a/haskell-timezone-olson/PKGBUILD
+++ b/haskell-timezone-olson/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=timezone-olson
 pkgname=haskell-${_hkgname}
 pkgver=0.2.0
-pkgrel=6
+pkgrel=7
 pkgdesc='Pure Haskell parser and renderer for binary Olson timezone files'
 url='http://projects.haskell.org/time-ng/'
 license=('BSD')
@@ -21,7 +21,7 @@ build() {
       --enable-executable-dynamic \
       --disable-library-vanilla \
       --prefix=/usr \
-      --docdir=/usr/share/doc/$pkgname \
+      --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname \
       --dynlibdir=/usr/lib \
       --libsubdir=\$compiler/site-local/\$pkgid --ghc-option=-fllvm \
       --ghc-option=-optl-Wl\,-z\,relro\,-z\,now \
