--- a/iaito/PKGBUILD
+++ b/iaito/PKGBUILD
@@ -5,12 +5,12 @@
 pkgname=iaito
 _gitcommit=24a2eba21c43f42aa4535278be20ff7e957c884d
 pkgver=5.5beta0.r16.g24a2eba2
-pkgrel=1
+pkgrel=2
 pkgdesc='Qt and C++ GUI for radare2 reverse engineering framework'
 url='https://github.com/radareorg/iaito'
 arch=('x86_64')
 license=('GPL3')
-depends=('radare2' 'capstone' 'qt5-base' 'qt5-svg' 'qt5-webengine' 'icu' 'python' 'jupyter'
+depends=('radare2' 'capstone' 'qt5-base' 'qt5-svg' 'qt5-webengine' 'icu' 'python'
          'pyside2' 'python-shiboken2' 'graphviz' 'gcc-libs' 'syntax-highlighting')
 makedepends=('git' 'cmake' 'ninja' 'shiboken2' 'qt5-tools')
 optdepends=('r2ghidra: ghidra decompiler plugin')
