--- a/xorg-setxkbmap/PKGBUILD
+++ b/xorg-setxkbmap/PKGBUILD
@@ -1,17 +1,16 @@
-# Maintainer: Gaetan Bisson <bisson@archlinux.org>
-# Contributor: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=xorg-setxkbmap
-pkgver=1.3.2
-pkgrel=2
+pkgver=1.3.3
+pkgrel=1
 pkgdesc='Set the keyboard using the X Keyboard Extension'
 url='https://xorg.freedesktop.org/'
 license=('custom')
 arch=('x86_64')
-depends=('libxkbfile')
+depends=('libxkbfile' 'xorg-xrandr')
 makedepends=('xorg-util-macros')
-source=(${url}/releases/individual/app/setxkbmap-${pkgver}.tar.bz2{,.sig})
-sha512sums=('bfa8015dee0d8d3fdbbd89afbd71c8606ce168d6edca8521d5ed05a00fecbea39bc4bfcce84b71458bdeb34c60bd80a5df27e0691ccee3966443ecdc937faf38'
+source=(${url}/releases/individual/app/setxkbmap-${pkgver}.tar.xz{,.sig})
+sha512sums=('208f07a7f7bce47b573099d4cd8c941a3a4d74b456720bc3ca1cbba298381a2ab98c7500d6e6cd6d5dd61840b7c42cf6521da754ec395f266f8158102a55ad58'
             'SKIP')
 validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <alan.coopersmith@oracle.com>
 groups=('xorg-apps' 'xorg')
