--- a/tor/PKGBUILD
+++ b/tor/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor: Sid Karunaratne
 
 pkgname=tor
-pkgver=0.4.6.9
+pkgver=0.4.6.10
 pkgrel=1
 pkgdesc='Anonymizing overlay network.'
 arch=('x86_64')
@@ -17,19 +17,16 @@ depends=('openssl' 'libevent' 'bash' 'libseccomp' 'zstd' 'libcap' 'systemd-libs'
 optdepends=('torsocks: for torify')
 makedepends=('ca-certificates' 'systemd')
 backup=('etc/tor/torrc')
-source=("https://www.torproject.org/dist/${pkgname}-${pkgver}.tar.gz"{,.asc}
+source=("https://dist.torproject.org/${pkgname}-${pkgver}.tar.gz"
         'torrc.patch'
         'tor.sysusers'
         'tor.tmpfiles'
         'tor.service')
-b2sums=('7d6add30867a3b18471bece559acbf6782b516229b8ab2c764f4a581fcbe3c2fa748f2708c60bf0f8a1165bc1fdd930fe00adaf7c1f546e6a7e98bdc0f1abb21'
-        'SKIP'
+b2sums=('4bdf8ab8ac992866ffc18711de0ad9e19b496398dfdace4d3902273822666dcfda3acd825ee22251cd8d671ff563702c6f24fe8670719a2c75d144cfe9219f68'
         '3359e138d823a77df2a42ce3fe8c6ecb4004e9ec191863db7857aceea7c136c78f09518b1a199dfd3215f5d61f1c060f4a0e2141c5bdb6b847af60fb6e9a81a7'
         '9053da53926f2120ac57b6c1442238f5bbd89bf9270347c4e00b721b39939bebc6adfcf814a9d7289dfd14d085d91c193529305336db93190da5b7f586a031df'
         '5d55d9a7e42b6ce78b8ab985bab37afe8f0bacddb5abd895c4a490adb8f98b9422f90b40066fef05ecf37b7b21e80aadc615c4b7f6e12b05581304113a1b1f1d'
         '327c1a35c3d4c44f93edb47959c8c41ab6af4cbfcbb8f4e9f54f2f69d17d148bf85e2d2c8aefe2d3165e123056dd68a248af78d1ba713b94a4e6d27a9cf412f1')
-validpgpkeys=('2133BC600AB133E1D826D173FE43009C4607B1FB'  # Nick Mathewson
-              'F65CE37F04BA5B360AE6EE17C218525819F78451') # Roger Dingledine
 
 prepare() {
   cd ${pkgname}-${pkgver}
