--- a/java-atk-wrapper/PKGBUILD
+++ b/java-atk-wrapper/PKGBUILD
@@ -6,8 +6,8 @@
 pkgbase=java-atk-wrapper
 pkgname=(java-atk-wrapper-common java-atk-wrapper-openjdk)
 pkgver=0.38.0
-pkgrel=3
-_jvmvers=(8 11 17)
+pkgrel=4
+_jvmvers=(8 11 17 18)
 pkgdesc='ATK wrapper for screen reader access to Java Swing applications'
 url='https://gitlab.gnome.org/GNOME/java-atk-wrapper/'
 arch=('x86_64')
