--- a/inetutils/PKGBUILD
+++ b/inetutils/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=inetutils
-pkgver=2.2
+pkgver=2.3
 pkgrel=1
 pkgdesc="A collection of common network programs"
 arch=('x86_64')
@@ -20,7 +20,7 @@ source=("https://ftp.gnu.org/gnu/inetutils/${pkgname}-${pkgver}.tar.xz"{,.sig}
         'ftpd.service' 'rlogin.pam' 'rlogin@.service' 'rlogin.socket' 'rlogin.xinetd'
         'rsh.pam' 'rsh@.service' 'rsh.socket' 'rsh.xinetd' 'talk.service' 'talk.socket'
         'talk.xinetd' 'telnet@.service' 'telnet.socket' 'telnet.xinetd')
-sha512sums=('153bc02b2d497f927528f9aac04f16011ec5eb54a3acd98c100dfb6b0b01a63fd1cbc7d2e502b434e38d3ef70208d7a498141b930b1818181343627a525eaeef'
+sha512sums=('bedaa347ad0e4e7ab43a0cb60a2bb693f84de7687a368e7a10d328306db6f508a0ef28ee80e6110a3e932a094d4b9355911935fd9f0700fe991b853a063adf60'
             'SKIP'
             'df5b37c9fc072e012f0e67d849db7e535a62ddb17a37e865acb157f2bc16ffd72d84f24fef1e788dacbbe7e5675e87e141fbd36e53339cc7810dde1b9c54a3b8'
             '432a45af5cd4f9f2dee4b631b45745b734e47cf631553e79db31905fa0839988914bcfed1dfcdd00d2ea6e4029b0674d46623c33ce0bd0678c2628fbaa0d1b25'
@@ -41,6 +41,7 @@ sha512sums=('153bc02b2d497f927528f9aac04f16011ec5eb54a3acd98c100dfb6b0b01a63fd1c
 validpgpkeys=(
   '4FBD67621082C4C502448E3B180551BAD95A3C35' # Alfred M. Szmidt <ams@gnu.org>
   '9AA9BDB11BB1B99A21285A330664A76954265E8C' # Simon Josefsson <simon@josefsson.org>
+  'B1D2BD1375BECB784CF4F8C4D73CF638C53C06BE' # simon@josefsson.org
 )
 
 build() {
