--- a/irssi/PKGBUILD
+++ b/irssi/PKGBUILD
@@ -3,35 +3,36 @@
 # Contributor: Dan McGee <dan@archlinux.org>
 
 pkgname=irssi
-pkgver=1.2.3
-pkgrel=3
+pkgver=1.4.2
+pkgrel=1
 pkgdesc='Modular text mode IRC client with Perl scripting'
 url='https://irssi.org/'
 arch=('x86_64')
 license=('GPL')
 depends=('glibc' 'glib2' 'openssl' 'libotr' 'perl' 'ncurses' 'libncursesw.so')
+makedepends=('meson' 'ninja')
 optdepends=('perl-libwww: for the scriptassist script')
 replaces=('irssi-otr')
 backup=('etc/irssi.conf')
 source=(https://github.com/irssi/irssi/releases/download/${pkgver}/${pkgname}-${pkgver}.tar.xz{,.asc})
-sha512sums=('826b7bfd86a54647f2d344b6c461e1118b7382fb1637cf33c395af41a9a4ca5d8a794a415f0f0737178968cf2463bb46a0e7b7fd7014c968668b16183e0644bc'
+sha512sums=('428157b85226b5299f55679d9384d3ae8b1e61f50a528bf21ffdf2f4b56014e0a86bdcf9ce05cf4dedd59d53829323bb62029a570f90ebf3243a06c3ce220caf'
             'SKIP')
 validpgpkeys=('7EE65E3082A5FB06AC7C368D00CCB587DDBEF0E1') # The Irssi project <staff@irssi.org>
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --with-proxy \
-    --with-perl-lib=vendor \
-    --with-otr
-  make
+  arch-meson Build \
+    -Dwith-perl-lib=vendor \
+    -Dwith-proxy=yes \
+    -Dwith-otr=yes \
+    -Dwith-perl=yes
+  ninja -C Build
 }
 
 package() {
   cd ${pkgname}-${pkgver}
-  make DESTDIR="${pkgdir}" install
+  DESTDIR="${pkgdir}" ninja -C Build install
+  install -Dm 644 irssi.conf "${pkgdir}"/etc/irssi.conf
 }
 
 # vim: ts=2 sw=2 et:
