--- a/vsftpd/PKGBUILD
+++ b/vsftpd/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=vsftpd
-pkgver=3.0.3
-pkgrel=7
+pkgver=3.0.5
+pkgrel=1
 pkgdesc='Very Secure FTP daemon'
 url='https://security.appspot.com/vsftpd.html'
 arch=('x86_64')
@@ -26,7 +26,7 @@ source=(https://security.appspot.com/downloads/${pkgname}-${pkgver}.tar.gz{,.asc
         vsftpd-fix-seccomp.patch
         vsftpd-conf-pam.patch
         vsftpd-disable-anonymous-access-by-default.patch)
-sha256sums=('9d4d2bf6e6e2884852ba4e69e157a2cecd68c5a7635d66a3a8cf8d898c955ef7'
+sha256sums=('26b602ae454b0ba6d99ef44a09b6b9e0dfa7f67228106736df1f278c70bc91d3'
             'SKIP'
             'd5185e48fffc6253499a55e0fe0f90a3424fc639640af11a9d38df33fb145afe'
             '9fdbfd2ec0207170371ca3cf2b0ddca2dc2fe3d062e5792e0d3e51474c3198c9'
@@ -37,7 +37,9 @@ sha256sums=('9d4d2bf6e6e2884852ba4e69e157a2cecd68c5a7635d66a3a8cf8d898c955ef7'
             '8bb7e4e4640137d38a2944859c2f443eea559ecb7f594c0fa4e962539107af66'
             '751715726c4b888d5c96846ac0bd0d64238cceb28ef3c2ef447af85cdc2b79f1'
             '4baa5a2db122974fa2a9603d335aed59dee5ad4217615fbe247301d129281d20')
-validpgpkeys=('8660FD3291B184CDBC2F6418AA62EC463C0E751C') # Chris Evans
+validpgpkeys=(
+  '67A2AB4F41F9972C21F6BF667B89011BCAE1CFEA' # Chris Evans <scarybeasts@gmail.com>
+)
 
 prepare() {
   cd ${pkgname}-${pkgver}
